--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "main": "source/server.ts",
-  "scripts": {
-    "build": "rm -rf build && prettier --write source/ && tsc"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/mysql": "^2.15.16",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.6.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.19.0",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.0",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
-  },
-  "keywords": [],
-  "description": ""
+    "name": "api",
+    "version": "1.0.0",
+    "main": "source/server.ts",
+    "scripts": {
+        "start:dev": "ts-node-dev --clear source/server.ts",
+        "build": "rm -rf build && prettier --write source/ && tsc"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.6.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mysql": "^2.18.1",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.3.17"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/body-parser": "^1.19.0",
+        "@types/dotenv": "^8.2.0",
+        "@types/express": "^4.17.8",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/mysql": "^2.15.16",
+        "nodemon": "^3.0.1",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.2.2"
+    },
+    "keywords": [],
+    "description": ""
 }
