--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.6.0",
         "express": "^4.17.1",
+        "express-validator": "^7.0.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
         "reflect-metadata": "^0.1.13",
