--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express-validator": "^7.0.1",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
+        "node-schedule": "^2.1.1",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.17"
     },
@@ -26,6 +27,7 @@
         "@types/express": "^4.17.8",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mysql": "^2.15.16",
+        "@types/node-schedule": "^2.1.1",
         "nodemon": "^3.0.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
