--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "main": "source/server.ts",
     "scripts": {
         "start:dev": "ts-node-dev --clear source/server.ts",
+        "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
         "build": "rm -rf build && prettier --write source/ && tsc"
     },
     "author": "",
@@ -18,16 +19,24 @@
         "mysql": "^2.18.1",
         "node-schedule": "^2.1.1",
         "reflect-metadata": "^0.1.13",
-        "typeorm": "^0.3.17"
+        "typeorm": "^0.3.17",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.0",
+        "@types/chai": "^4.3.6",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.8",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/mocha": "^10.0.2",
         "@types/mysql": "^2.15.16",
+        "@types/node": "^20.7.1",
         "@types/node-schedule": "^2.1.1",
+        "@types/uuid": "^9.0.4",
+        "chai": "^4.3.10",
+        "chai-http": "^4.4.0",
+        "mocha": "^10.2.0",
         "nodemon": "^3.0.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
